# visidata

./: .codespellrc  .envrc  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .travis.yml  CHANGELOG  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.alpine  Dockerfile.darkdraw.alpine  LICENSE  MANIFEST.in  README.md  RELEASE.md  ROADMAP  TESTS  async.py  blame.py  build.sh  circle.yml  commands-proposal.tsv  diff.py  dpb_working_notes.rst  git.py  merge.py  mkdocs.yml  mkwww.sh  notes.txt  requirements.in  requirements.scm  requirements.txt  runtest.sh  setup.py  test.sh  testdiff.sh  tox.ini  vd.py  (+5 more)
.circleci/: config.yml
.devcontainer/: Dockerfile  launch.json  (+3 more)
vdplus/hub/: .dockerignore  Dockerfile  README.md  app.py  pyproject.toml  run.sh
vdplus/hub/api/: .env.sample  app.py  database.py  k8s.py  pod.yaml  pod_manager.py  pyproject.toml  tty_websocket.py
vdplus/hub/api/migrations/: 001_users.py  002_guests.py  003_current_pod_state.py  004_current_pod_name.py  conf.py
vdplus/hub/api/models/: user.py
vdplus/hub/spa/: .babelrc  index.html  package.json  tsconfig.json  webpack.config.js
vdplus/hub/spa/src/: Layout.ts  Utils.ts  api.ts  main.ts  manager.ts  user.ts  websocket.ts
vdplus/hub/spa/src/@types/: vd.d.ts
vdplus/hub/spa/src/assets/: base_theme.scss  main.scss
vdplus/hub/spa/src/lib/terminal/: manager.ts  websocket.ts
vdplus/hub/spa/src/pages/: About.ts  About.tsx  Account.ts  Home.ts  MagicLink.ts
vdplus/hub/spa/src/partials/: Button.ts
vdplus/hub/test/: testcafe.sh
vdplus/hub/test/integration/: Helper.js  main.js
(+1612 files in other folders)
