[tool.poetry]
name = "vdhub"
version = "0.0.0"
description = "Aiohttp app to manage VisiData on a Kubernetes cluster"
authors = ["The VisiData team"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = {extras = ["speedups"], version = "^3.6.2"}
gunicorn = "^20.0.4"
peewee = "^3.13.1"
peewee_migrate = "^1.1.6"
psycopg2 = "^2.8.4"
python-dotenv = "^0.10.3"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
pytest = "^3.8"
aiohttp-devtools = "^0.13.1"

